# docs/swagger.yaml
@@ -187,6 +187,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/utils.HttpError'
+      security:
+      - BearerAuth: []
       summary: get mutilple users
       tags:
       - User
@@ -240,4 +242,9 @@ paths:
       summary: create a user
       tags:
       - User
+securityDefinitions:
+  BearerAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
