# httpserver/routers/user_router.go
@@ -2,7 +2,6 @@ package routers
 
 import (
 	controllers "final-project-2/httpserver/controllers"
-	"final-project-2/httpserver/middleware"
 	"final-project-2/httpserver/services"
 
 	"github.com/gin-gonic/gin"
@@ -13,7 +12,7 @@ func UserRouter(route *gin.RouterGroup, userController controllers.UserControlle
 	{
 		userRouter.POST("register", userController.Register)
 		userRouter.POST("login", userController.Login)
-		userRouter.GET("", middleware.JwtGuard(authService), userController.GetUsers)
+		// userRouter.GET("", middleware.JwtGuard(authService), userController.GetUsers)
 	}
 	return userRouter
 }
